tests/ui/suggestions/issue-90974.rs
fn main() {
    println!("{}", (3.).recip()); //~ERROR
}
